# quilt-installer

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  icon.icns  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
codeformat/: HEADER-PARSER-CLASSES
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
native/.cargo/: config.toml
native/resources/windows/: program.manifest  program.rc  quilt-installer.exe.manifest  quilt-installer.exe.rc
native/src/: macos.rs  main.rs  unsupported.rs  windows.rs
src/java8/java-templates/org/quiltmc/installer/: BuildConstants8.java.peb
src/java8/java/org/quiltmc/installer/: GuiMain.java  Main.java
src/main/java/: module-info.java
src/main/java/org/quiltmc/installer/: CliInstaller.java  Connections.java  Gsons.java  LaunchJson.java  LauncherProfiles.java  Localization.java  Main.java  OsPaths.java  ParseException.java  QuiltMeta.java  ServerScripts.java  ThrowingFunction.java  VersionManifest.java
src/main/java/org/quiltmc/installer/action/: Action.java  InstallClient.java  InstallServer.java  ListVersions.java  MinecraftInstallation.java
src/main/java/org/quiltmc/installer/cli/: Action.java  CliInstaller.java  InputParser.java  InstallClient.java  InstallServer.java  ListVersions.java  Node.java  UsageParser.java
src/main/java/org/quiltmc/installer/client/: LaunchJson.java  LauncherProfiles.java
src/main/java/org/quiltmc/installer/gui/swing/: AbstractPanel.java  ClientPanel.java  ServerPanel.java  SwingInstaller.java
src/main/java/org/quiltmc/installer/util/: Util.java
src/main/java/org/quiltmc/installer/util/json/: MojangInstantTypeAdapter.java
src/main/java/org/quiltmc/installer/util/maven/: MavenArtifact.java
src/main/java/org/quiltmc/installer/util/meta/: Endpoint.java  EndpointReader.java  QuiltMeta.java
src/main/java/org/quiltmc/installer/util/mojang/: MinecraftMeta.java
src/main/resources/lang/: en-US.usage  installer.properties  installer_et_EE.properties  installer_fr_FR.properties  installer_zh_CN.properties
(+4 files in other folders)
