[package]
name = "quilt-installer"
version = "0.1.0"
authors = [
    "QuiltMC"
]

edition = "2021"

[dependencies]

# Opening URLs
open = { version = "1.6.0" }


# Error dialogs
native-dialog = { version = "0.5.5" }

# Get the home directory on Mac (might be a better way?)
dirs = { version = "1.0.4" }

[target.'cfg(windows)'.dependencies]
# Lookup in registry for installation location for additional JREs
winreg = { version = "0.8.0" }

[build-dependencies]
embed-resource = "1.6.0"
winres = "0.1.11"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = "symbols"