[package]
name = "quilt-installer"
version = "0.1.0"
authors = [
    "QuiltMC"
]

edition = "2021"

[dependencies]

# Opening URLs
open = { version = "2.0.0" }

# We use this to generate a random name for the temporary file we make as needed.
rand = { version = "0.8.5" }

# Error dialogs
native-dialog = { version = "0.6.3" }

# Get the home directory on Mac (might be a better way?)
dirs = { version = "4.0.0" }

[target.'cfg(windows)'.dependencies]
# Lookup in registry for installation location for additional JREs
winreg = { version = "0.10.1" }

[build-dependencies]
embed-resource = "1.7.3"
winres = "0.1.12"

[profile.release]
lto = true
opt-level = 'z'
